--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ aiohttp = ">=3.8.4,<3.10.0"
 
 [tool.poetry.group.dev.dependencies]
 neovim = "^0.3.1"
+debugpy = "^1.8.1"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
